plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.campusform'
version = '0.0.1-SNAPSHOT'
description = 'Backend API Server for Campus Form'

springBoot {
	// Gradle bootRun에서 메인 클래스 자동 추론 실패 대응용 설정
	mainClass = 'com.campusform.server.CampusFormServerApplication'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Initializr
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	// 개발 편의 도구
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'

	// 테스트
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'

	runtimeOnly 'com.h2database:h2'

	// 변경된 클래스만 새로 로드하는 라이브러리
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// AWS S3
	implementation platform('software.amazon.awssdk:bom:2.34.0')
	implementation 'software.amazon.awssdk:s3'

	// Google Sheets API
	implementation 'com.google.api-client:google-api-client:2.2.0'
	implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.19.0'
}

tasks.named('test') {
	useJUnitPlatform()
}